seminarix-handbook (0.1.24) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Ferdinand Thommes ]
  * removed old cruft debian files index.html lib menu added all new
    logos to the html files

 -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:04:07 +0100

seminarix-handbook (0.1.23) unstable; urgency=low

  * appease lintian and write (C) as © in debian/copyright.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 20 Feb 2008 23:50:49 +0100

seminarix-handbook (0.1.22) unstable; urgency=low

  * updated siduxedu logo

 -- Ferdinand Thommes <devil@sidux.com>  Mon, 04 Feb 2008 08:38:22 +0100

seminarix-handbook (0.1.21) unstable; urgency=low

  * fix lintian errors:
    - html files shouldn't be executable.
    - debian menu system files need to follow syntax and semantics.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 30 Jan 2008 01:21:23 +0100

seminarix-handbook (0.1.20) unstable; urgency=low

  * added final icon

 -- Ferdinand Thommes <devil@sidux.com>  Tue, 29 Jan 2008 21:00:35 +0100

seminarix-handbook (0.1.19) unstable; urgency=low

  * set seminarix-handbook.desktop to use new icon

 -- Ferdinand Thommes <devil@sidux.com>  Sun, 27 Jan 2008 09:04:40 +0100

seminarix-handbook (0.1.18) unstable; urgency=low

  * bump version number to fix caching issues.

 -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 10:07:34 +0100

seminarix-handbook (0.1.17) unstable; urgency=low

  [ Dinko Sabo ]
  * added newest sources from berlios
  * seminarix-handbook-common.install removed
  * seminarix-handbook.desktop moved to sidux-seminarix-common

  [ Ferdinand Thommes ]
  * seminarix-handbook-common,install removed

 -- Ferdinand Thommes <devil@sidux.com>  Sat, 19 Jan 2008 23:29:37 +0100

seminarix-handbook (0.1.16) unstable; urgency=low

  [ Ferdinand Thommes ]
  * fixed categorie in seminarix-handbook.desktop

  [ Stefan Lippers-Hollmann ]
  * remove previous patch again, merged upstream.
