@@ -17,7 +17,7 @@
 <div id="menu"> <!-- menu starts here maintainer de xxxxxxxx -->
 <!--Welcome to the  sidux-manual  edu manual  00.04-2007-12-12 -->
 <!-- menu last updated by bluewater 115/12/2007 0100rs AEDST 114/12/2007 1400hrs UTC -->
-<img src="../lib/images/logos/gold-logo.png" alt="logo" id="menu-header" />
+<img src="../lib/images/logos/sidux_logo.png" alt="logo" id="menu-header" />
 	<ul id="top-list">
 		<li><a href="http://sidux.com/">Zu sidux.com</a></li>
 		<li><a href="http://manual.sidux.com/">sidux OS Handbuch</a></li>
