@@ -6,8 +6,9 @@ seminarix-handbook (0.1.24) UNRELEASED; urgency=low
   [ Ferdinand Thommes ]
   * removed old cruft debian files index.html lib menu added all new
     logos to the html files
+  * add new logos for html files
 
- -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:04:07 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:07:10 +0100
 
 seminarix-handbook (0.1.23) unstable; urgency=low
 
